# script-interpreter

./: .gitignore  CMakeLists.txt  README.md  mvp.cpp
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CODE_STYLE.md  CONTRIBUTING.md  PRD.md  QUESTIONS.md
examples/: algorithms.sl  arrays.sl  closures.sl  functional.sl  functions.sl  hello.sl  math.sl  recursion.sl  strings.sl
include/: ast.h  environment.h  evaluator.h  lexer.h  object.h  parser.h  token.h
src/: evaluator.cpp  lexer.cpp  main.cpp  parser.cpp  token.cpp
tests/: evaluator_extended_test.cpp  evaluator_test.cpp  lexer_extended_test.cpp  lexer_test.cpp  parser_test.cpp
